- Reduced width of timerlogos in displaymainmenu.xml
- Added posters for folders in displaymenurecordings.xml
- Fixed format of menuitemnumbers in displaymenu-main and -setup
- Fixed condition for running timer in displaymenutimers.xml

2015-02-21:

- Changed position of folderposters in displaymenurecordings
- Added flags for messagebars
- Changed statusmarker for timers in displaymenuschedules
- Added status-graphics
- Changed statusmarker for timers and recordings
- Changed {name} to {epgname} in displaymenudetailrecording.xml

2015-02-22:

- Changed position of series- and movies-posters in detailepg and detailrecording
- Fixed scrolled text in epg-descriptions
- Fixed textposition at recordingsfolder

2015-04-16:

- Merged with shady_KISS
- Fixed setupiconbar
- Fixed scrollbars
- Fixed heights in weatherforecast
- Enhanced postion of setupiconbar
- Added setup for delay and fadetimes

2015-04-18:

- Switched devices in mainmenu to modus=light
- Numbered setup for delay and fadetimes

2015-04-19:

- Increased size of channellogos for timers in mainmenu (provided by utiltiy@vdrportal.de)

2015-04-20:

- Optimized position of timerstoptime in displaymenutimers (provided by utiltiy@vdrportal.de)
- Added section for neutrinoepg-plugin in displaymenudefault
- Added graphical progressbars for systeminfo-plugin
- Added symbol for remotetimers in mainmenutimers

2015-04-21:

- Updated HISTORY, increased luminescence of remoteTimers.png

2015-04-22:

- Added percentseen in displaymenurecordings
- Reworked displayreplay, added recend
- Added setup for colored/gray elapsed-bars
- Fixed rectitle

2015-04-24:

- Optimized bar and position of percentseen

2015-04-26:

- Added skinsetup for recordingsmenu
- Fixed translation in setup.xml

2015-04-27:

- Added special treatment for fritzbox "Call details" and plex-setup "UUID" in displaymenudefault

2015-04-28:

- Some small fixes
- Updated HISTORY
- Fixed tokens title/eventtitle in displaymenutimers