@@ -88,3 +88,4 @@ shady-skin Revision History
 - Some small fixes
 - Updated HISTORY
 - Fixed tokens title/eventtitle in displaymenutimers
+- Fixed areascroll in displaymenuschedules
